@@ -1,3 +1,7 @@
+2015-02-19  Marcus Shawcroft  <marcus.shawcroft@arm.com>
+
+	* aarch64.h (R_AARCH64_P32_TLSGD_ADR_PREL21): Add.
+
 2015-02-24  Nick Clifton  <nickc@redhat.com>
 
 	* v850.h (EF_RH850_SIMD): Delete deprecated flag.
